# Battleline-Assault

./: CMakeLists.txt  Enemy.h  Enemy.qml  GameController.cpp  GameController.h  Main.qml  Player.cpp  Player.h  Player.qml  PlayerBullet.cpp  PlayerBullet.h  PlayerBullet.qml  README.md  SettingsManager.cpp  SettingsManager.h  assets.qrc  main.cpp  qmlmodules
qml/: Bullet.qml  CustomText.qml  Enemy.qml  Main.qml  MenuOverlay.qml  Player.qml
qml/Components/: GameHUD.qml  MainMenuButton.qml
qml/Customs/: CustomText.qml
src/: CMakeLists.txt
src/core/: CMakeLists.txt  GameController.cpp  GameController.h
src/core/include/: GameController.h  SettingsManager.h
src/core/src/: GameController.cpp  SettingsManager.cpp
src/entities/: CMakeLists.txt  Enemy.cpp  Enemy.h  Player.cpp  Player.h  PlayerBullet.h
src/entities/include/: AudioManager.h  Bullet.h  Enemy.h  Player.h  PlayerBullet.h
src/entities/src/: AudioManager.cpp  Bullet.cpp  Enemy.cpp  Player.cpp  PlayerBullet.cpp
src/managers/: CMakeLists.txt
src/managers/include/: BulletManager.h  EnemyManager.h
src/managers/src/: BulletManager.cpp  EnemyManager.cpp
